i18n/ja/docusaurus-plugin-content-docs/version-0.2.x/operations/staging.md
---
sidebar_position: 2
---

# インタラクティブなステージング

ファイルを個別に、または一括で確認してステージングします。

## ナビゲーション

`2` を押して **変更されたファイル** パネルにフォーカスします。

## キーバインド

| キー     | アクション                                                   |
| :------- | :----------------------------------------------------------- |
| `space`  | ステージング/ステージング解除の切り替え                      |
| `ctrl+s` | すべてステージング                                           |
| `ctrl+u` | すべてステージング解除                                       |
| `r`      | コンフリクトを解決（コンフリクトが発生しているファイルのみ） |
| `d`      | 変更を破棄                                                   |
| `e`      | ファイルを編集（外部エディタで開く）                         |
| `enter`  | 差分を表示                                                   |

## ワークフロー

### 変更の破棄

変更の破棄には、誤ったデータ損失を防ぐための安全確認が含まれます。

1.  **選択**: 破棄したいファイルをハイライトします。
2.  **トリガー**: `d` を押します。
3.  **ロジックフロー**:
    - **シナリオ A (単純)**: 作業ツリーのみ、またはインデックスのみに変更がある場合。
      - **ポップアップ**: "Confirm Discard"（破棄の確認）。
    - **シナリオ B (複雑)**: 作業ツリーとインデックスの両方に変更がある場合（ステージング済みと未ステージングの変更）。
      - **ポップアップ**: "Choose Discard Type"（破棄タイプの選択 - 全てを破棄、または未ステージングを破棄）。
      - **フォローアップ**: 選択後、確認ポップアップが表示されます。
4.  **確認**: `enter` を押して確認します。

---

### マージコンフリクトの解決

Git が自動的に変更をマージできない場合（例：プル、ブランチのマージ、またはコンフリクトを含むブランチへの切り替え後）、影響を受けたファイルは **変更されたファイル** パネルにコンフリクトステータスで表示されます。

1.  **識別**: コンフリクトが発生しているファイルは、ファイルリストに特別なインジケーターで表示されます。
2.  **選択**: コンフリクトが発生しているファイルをハイライトします。
3.  **トリガー**: `r` を押して **コンフリクト解決** オプションポップアップを開きます。
4.  **解決戦略を選択**:
    - **ファイルのマージを再開**: ファイルにコンフリクトマーカーを復元します（ステージングされた解決を破棄）。コンフリクトを手動で再編集したい場合に使用します。
    - **ローカルの変更を受け入れる（ours）**: 現在のブランチのファイルバージョンを保持し、受信した変更を破棄します。
    - **受信した変更を受け入れる（theirs）**: 他のブランチのファイルバージョンを受け入れ、ローカルの変更を破棄します。
5.  **確認**: `enter` を押して選択した解決戦略を適用します。
6.  **レビュー**: コンフリクトが解決されました。ファイルをステージングしてコミットできるようになります。

:::tip
コンフリクトを解決した後は、必ず `enter` を使用してファイルを確認し、コミットする前に解決が正しいことを確認してください。
:::

---

### 差分の表示

1.  **選択**: ファイルをハイライトします。
2.  **トリガー**: `enter` を押します。
3.  **結果**: **詳細ビュー** (右パネル) が更新され、差分が表示されます。
    - **緑**: 追加された行。
    - **赤**: 削除された行。

### 分割ビュー（ステージング済み vs 未ステージング）

変更を表示する際、詳細ビューを分割してステージング済みと未ステージングの変更を並べて比較できます（該当する場合）。

- **ナビゲーション**: `[` と `]` を使用して、分割パネル間のフォーカスを切り替えたり、ビューを切り替えたりします。
- **コンテキスト**: ファイルを部分的にステージングしており、残りの内容を確認したい場合に便利です。

### ファイルの編集

すばやく変更を加えるか、完全な IDE でファイルを開くには：

1.  **選択**: リスト内のファイルをハイライトします。
2.  **トリガー**: `e` を押します。
3.  **アクション**: 設定されたエディタ（例：Vim、VS Code）またはターミナルのデフォルトでファイルが開きます。
